--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "clinicaltrials",
   "version": "0.0.0",
   "dependencies": {
-    "express": "^4.8.2"
+    "express": "^4.8.2",
+    "xml2js": "^0.4.4"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
