--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
-    "highcharts-release": "~4.0.3"
+    "highcharts-release": "~4.0.3",
+    "ng-table": "~0.3.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
